--- a/index.html
+++ b/index.html
@@ -118,101 +118,211 @@
             <!-- cards -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 ">
                 <!-- card 1 -->
-                <div class="card px-10 py-5 md:px-20 md:py-8 border-r border-b  border-dark-6 rounded-none hover:bg-gradient-to-b from-[#F3F3F3] to-transparent">
+                <div
+                    class="card px-10 py-5 md:px-20 md:py-8 border-r border-b  border-dark-6 rounded-none hover:bg-gradient-to-b from-[#F3F3F3] to-transparent">
                     <figure class="px-10 pt-10">
-                        <img src="images/business.png"
-                            alt="Shoes" class="rounded-xl" />
+                        <img src="images/business.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="font-garamond text-3xl font-semibold">Business Law</h2>
                         <p class="text-dark-3 mb-5">
-                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                            There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour.
                         </p>
                         <div class="card-actions">
-                            <button class="btn bg-legal-primary rounded-full text-white"><i class="fa-solid fa-arrow-right"></i></button>
+                            <button class="btn bg-legal-primary rounded-full text-white"><i
+                                    class="fa-solid fa-arrow-right"></i></button>
                         </div>
                     </div>
                 </div>
                 <!-- card 2 -->
-                <div class="card px-10 py-5 md:px-20 md:py-8 border-r border-b  border-dark-6 rounded-none hover:bg-gradient-to-b from-[#F3F3F3] to-transparent">
+                <div
+                    class="card px-10 py-5 md:px-20 md:py-8 border-r border-b  border-dark-6 rounded-none hover:bg-gradient-to-b from-[#F3F3F3] to-transparent">
                     <figure class="px-10 pt-10">
-                        <img src="images/criminal.png"
-                            alt="Shoes" class="rounded-xl" />
+                        <img src="images/criminal.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="font-garamond text-3xl font-semibold">Criminal Law</h2>
                         <p class="text-dark-3 mb-5">
-                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                            There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour.
                         </p>
                         <div class="card-actions">
-                            <button class="btn bg-legal-primary rounded-full text-white"><i class="fa-solid fa-arrow-right"></i></button>
+                            <button class="btn bg-legal-primary rounded-full text-white"><i
+                                    class="fa-solid fa-arrow-right"></i></button>
                         </div>
                     </div>
                 </div>
                 <!-- card 3 -->
-                <div class="card px-10 py-5 md:px-20 md:py-8 border-b  border-dark-6 rounded-none hover:bg-gradient-to-b from-[#F3F3F3] to-transparent">
+                <div
+                    class="card px-10 py-5 md:px-20 md:py-8 border-b  border-dark-6 rounded-none hover:bg-gradient-to-b from-[#F3F3F3] to-transparent">
                     <figure class="px-10 pt-10">
-                        <img src="images/child.png"
-                            alt="Shoes" class="rounded-xl" />
+                        <img src="images/child.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="font-garamond text-3xl font-semibold">Child Support</h2>
                         <p class="text-dark-3 mb-5">
-                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                            There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour.
                         </p>
                         <div class="card-actions">
-                            <button class="btn bg-legal-primary rounded-full text-white"><i class="fa-solid fa-arrow-right"></i></button>
+                            <button class="btn bg-legal-primary rounded-full text-white"><i
+                                    class="fa-solid fa-arrow-right"></i></button>
                         </div>
                     </div>
                 </div>
                 <!-- card 4 -->
-                <div class="card px-10 py-5 md:px-20 md:py-8 border-r border-dark-6 rounded-none hover:bg-gradient-to-b from-[#F3F3F3] to-transparent">
+                <div
+                    class="card px-10 py-5 md:px-20 md:py-8 border-r border-dark-6 rounded-none hover:bg-gradient-to-b from-[#F3F3F3] to-transparent">
                     <figure class="px-10 pt-10">
-                        <img src="images/education.png"
-                            alt="Shoes" class="rounded-xl" />
+                        <img src="images/education.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="font-garamond text-3xl font-semibold">Education Law</h2>
                         <p class="text-dark-3 mb-5">
-                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                            There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour.
                         </p>
                         <div class="card-actions">
-                            <button class="btn bg-legal-primary rounded-full text-white"><i class="fa-solid fa-arrow-right"></i></button>
+                            <button class="btn bg-legal-primary rounded-full text-white"><i
+                                    class="fa-solid fa-arrow-right"></i></button>
                         </div>
                     </div>
                 </div>
                 <!-- card 5 -->
-                <div class="card px-10 py-5 md:px-20 md:py-8 border-r border-dark-6 rounded-none hover:bg-gradient-to-b from-[#F3F3F3] to-transparent">
+                <div
+                    class="card px-10 py-5 md:px-20 md:py-8 border-r border-dark-6 rounded-none hover:bg-gradient-to-b from-[#F3F3F3] to-transparent">
                     <figure class="px-10 pt-10">
-                        <img src="images/divorce.png"
-                            alt="Shoes" class="rounded-xl" />
+                        <img src="images/divorce.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="font-garamond text-3xl font-semibold">Divorce Law</h2>
                         <p class="text-dark-3 mb-5">
-                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                            There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour.
                         </p>
                         <div class="card-actions">
-                            <button class="btn bg-legal-primary rounded-full text-white"><i class="fa-solid fa-arrow-right"></i></button>
+                            <button class="btn bg-legal-primary rounded-full text-white"><i
+                                    class="fa-solid fa-arrow-right"></i></button>
                         </div>
                     </div>
                 </div>
                 <!-- card 6 -->
-                <div class="card px-10 py-5 md:px-20 md:py-8 border-dark-6 rounded-none hover:bg-gradient-to-b from-[#F3F3F3] to-transparent">
+                <div
+                    class="card px-10 py-5 md:px-20 md:py-8 border-dark-6 rounded-none hover:bg-gradient-to-b from-[#F3F3F3] to-transparent">
                     <figure class="px-10 pt-10">
-                        <img src="images/tax.png"
-                            alt="Shoes" class="rounded-xl" />
+                        <img src="images/tax.png" alt="Shoes" class="rounded-xl" />
                     </figure>
                     <div class="card-body items-center text-center">
                         <h2 class="font-garamond text-3xl font-semibold">Tax Law</h2>
                         <p class="text-dark-3 mb-5">
-                            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                            There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour.
                         </p>
                         <div class="card-actions">
-                            <button class="btn bg-legal-primary rounded-full text-white"><i class="fa-solid fa-arrow-right"></i></button>
+                            <button class="btn bg-legal-primary rounded-full text-white"><i
+                                    class="fa-solid fa-arrow-right"></i></button>
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Client say section -->
+        <section class="mb-24">
+            <div class="carousel w-full">
+                <!-- slide 1 -->
+                <div id="slide1" class="carousel-item relative w-full ">
+                    <div class="hero w-full h-[500px]" style="background-image: url('images/banner.png'); ">
+                        <div class="hero-overlay bg-opacity-80"></div>
+                        <div class="hero-content text-neutral-content text-center">
+                            <div class="max-w-md">
+                                <!-- Avatar -->
+                                <div class="avatar">
+                                    <div class="w-24 rounded-full">
+                                        <img
+                                            src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+                                    </div>
+                                </div>
+                                <!-- Texts -->
+                                <h3 class="text-2xl font-extrabold font-garamond mb-2">Awlad Hossain</h3>
+                                <h5 class="text-base mb-8">UIX Designer</h5>
+                                <p class="mb-5">
+                                    Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
+                                    exercitationem
+                                    quasi. In deleniti eaque aut repudiandae et a id nisi.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+
+                <!-- slide 2 -->
+                <div id="slide2" class="carousel-item relative w-full ">
+                    <div class="hero w-full h-[500px]" style="background-image: url('images/banner.png'); ">
+                        <div class="hero-overlay bg-opacity-80"></div>
+                        <div class="hero-content text-neutral-content text-center">
+                            <div class="max-w-md">
+                                <!-- Avatar -->
+                                <div class="avatar">
+                                    <div class="w-24 rounded-full">
+                                        <img
+                                            src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+                                    </div>
+                                </div>
+                                <!-- Texts -->
+                                <h3 class="text-2xl font-extrabold font-garamond mb-2">Awlad Hossain</h3>
+                                <h5 class="text-base mb-8">UIX Designer</h5>
+                                <p class="mb-5">
+                                    Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
+                                    exercitationem
+                                    quasi. In deleniti eaque aut repudiandae et a id nisi.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+
+                <!-- slide 3 -->
+                <div id="slide3" class="carousel-item relative w-full ">
+                    <div class="hero w-full h-[500px]" style="background-image: url('images/banner.png'); ">
+                        <div class="hero-overlay bg-opacity-80"></div>
+                        <div class="hero-content text-neutral-content text-center">
+                            <div class="max-w-md">
+                                <!-- Avatar -->
+                                <div class="avatar">
+                                    <div class="w-24 rounded-full">
+                                        <img
+                                            src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+                                    </div>
+                                </div>
+                                <!-- Texts -->
+                                <h3 class="text-2xl font-extrabold font-garamond mb-2">Awlad Hossain</h3>
+                                <h5 class="text-base mb-8">UIX Designer</h5>
+                                <p class="mb-5">
+                                    Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi
+                                    exercitationem
+                                    quasi. In deleniti eaque aut repudiandae et a id nisi.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+
+
+                
             </div>
         </section>
     </main>
