--- a/index.html
+++ b/index.html
@@ -230,6 +230,11 @@
 
         <!-- Client say section -->
         <section class="mb-24">
+            <h2 class="font-extrabold text-4xl text-dark-2 font-garamond text-center mb-5">What Our Client Say</h2>
+            <p class="text-dark-3 text-center mb-12">
+                There are many variations of passages of Lorem Ipsum available, but the majority have <br>
+                suffered alteration in some form, by injected humour.
+            </p>
             <div class="carousel w-full">
                 <!-- slide 1 -->
                 <div id="slide1" class="carousel-item relative w-full ">
@@ -321,8 +326,78 @@
                     </div>
                 </div>
 
+                <!-- tab bar -->
+            </div>
+        </section>
 
-                
+        <!-- FAQ section -->
+        <section class="mb-24">
+            <h2 class="font-extrabold text-4xl text-dark-2 font-garamond text-center mb-5">Frequently Asked Any
+                Questions</h2>
+            <p class="text-dark-3 text-center mb-12">
+                There are many variations of passages of Lorem Ipsum available, but the majority have <br>
+                suffered alteration in some form, by injected humour.
+            </p>
+            <div class="flex flex-col md:flex-row gap-8 justify-center items-center">
+                <!-- Accordion -->
+                <div class="flex-1 space-y-8">
+                    <!-- Accordion 1 -->
+                    <div class="collapse collapse-plus bg-base-200 p-8">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title">
+                            <h3 class="text-2xl font-extrabold font-garamond text-dark-2">1. Are application fee waivers available?
+                            </h3>
+                        </div>
+                        <div class="collapse-content">
+                            <p class="text-dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered
+                                alteration in some form, by injected humour.</p>
+                        </div>
+                    </div>
+                    <!-- Accordion 2 -->
+                    <div class="collapse collapse-plus bg-base-200 p-8">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title">
+                            <h3 class="text-2xl font-extrabold font-garamond text-dark-2">1. Are application fee waivers available?
+                            </h3>
+                        </div>
+                        <div class="collapse-content">
+                            <p class="text-dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered
+                                alteration in some form, by injected humour.</p>
+                        </div>
+                    </div>
+                    <!-- Accordion 3 -->
+                    <div class="collapse collapse-plus bg-base-200 p-8">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title">
+                            <h3 class="text-2xl font-extrabold font-garamond text-dark-2">1. Are application fee waivers available?
+                            </h3>
+                        </div>
+                        <div class="collapse-content">
+                            <p class="text-dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered
+                                alteration in some form, by injected humour.</p>
+                        </div>
+                    </div>
+                    <!-- Accordion 4 -->
+                    <div class="collapse collapse-plus bg-base-200 p-8">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title">
+                            <h3 class="text-2xl font-extrabold font-garamond text-dark-2">1. Are application fee waivers available?
+                            </h3>
+                        </div>
+                        <div class="collapse-content">
+                            <p class="text-dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+                                suffered
+                                alteration in some form, by injected humour.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Image -->
+                <div class="flex-1">
+                    <img class="w-full" src="images/faq.png" alt="">
+                </div>
             </div>
         </section>
     </main>
