added Contact Us section

--- a/index.html
+++ b/index.html
@@ -345,11 +345,13 @@
                     <div class="collapse collapse-plus bg-base-200 p-8">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title">
-                            <h3 class="text-2xl font-extrabold font-garamond text-dark-2">1. Are application fee waivers available?
+                            <h3 class="text-2xl font-extrabold font-garamond text-dark-2">1. Are application fee waivers
+                                available?
                             </h3>
                         </div>
                         <div class="collapse-content">
-                            <p class="text-dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+                            <p class="text-dark-3">There are many variations of passages of Lorem Ipsum available, but
+                                the majority have
                                 suffered
                                 alteration in some form, by injected humour.</p>
                         </div>
@@ -358,11 +360,13 @@
                     <div class="collapse collapse-plus bg-base-200 p-8">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title">
-                            <h3 class="text-2xl font-extrabold font-garamond text-dark-2">1. Are application fee waivers available?
+                            <h3 class="text-2xl font-extrabold font-garamond text-dark-2">1. Are application fee waivers
+                                available?
                             </h3>
                         </div>
                         <div class="collapse-content">
-                            <p class="text-dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+                            <p class="text-dark-3">There are many variations of passages of Lorem Ipsum available, but
+                                the majority have
                                 suffered
                                 alteration in some form, by injected humour.</p>
                         </div>
@@ -371,11 +375,13 @@
                     <div class="collapse collapse-plus bg-base-200 p-8">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title">
-                            <h3 class="text-2xl font-extrabold font-garamond text-dark-2">1. Are application fee waivers available?
+                            <h3 class="text-2xl font-extrabold font-garamond text-dark-2">1. Are application fee waivers
+                                available?
                             </h3>
                         </div>
                         <div class="collapse-content">
-                            <p class="text-dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+                            <p class="text-dark-3">There are many variations of passages of Lorem Ipsum available, but
+                                the majority have
                                 suffered
                                 alteration in some form, by injected humour.</p>
                         </div>
@@ -384,11 +390,13 @@
                     <div class="collapse collapse-plus bg-base-200 p-8">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title">
-                            <h3 class="text-2xl font-extrabold font-garamond text-dark-2">1. Are application fee waivers available?
+                            <h3 class="text-2xl font-extrabold font-garamond text-dark-2">1. Are application fee waivers
+                                available?
                             </h3>
                         </div>
                         <div class="collapse-content">
-                            <p class="text-dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have
+                            <p class="text-dark-3">There are many variations of passages of Lorem Ipsum available, but
+                                the majority have
                                 suffered
                                 alteration in some form, by injected humour.</p>
                         </div>
@@ -397,6 +405,83 @@
                 <!-- Image -->
                 <div class="flex-1">
                     <img class="w-full" src="images/faq.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Us section -->
+        <section class="mb-24">
+            <h2 class="font-extrabold text-4xl text-dark-2 font-garamond text-center mb-5">Contact With Us</h2>
+            <p class="text-dark-3 text-center mb-12">
+                There are many variations of passages of Lorem Ipsum available, but the majority have <br>
+                suffered alteration in some form, by injected humour.
+            </p>
+            <!-- container -->
+            <div class="flex flex-col md:flex-row gap-8 justify-center items-center">
+                
+                <!-- cards -->
+                <div class="grid grid-cols-2">
+                    <!-- card 1 -->
+                    <div class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5 border-r border-b  border-dark-6 ">
+                        <figure class="px-10 pt-10">
+                            <img src="./images/location.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title text-2xl font-garamond text-dark-2 font-extrabold mb-4">Address</h2>
+                            <p>A108 Adam Street,</p>
+                            <p>New York, NY 535022</p>
+                        </div>
+                    </div>
+                    <!-- card 2 -->
+                    <div class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5  border-l border-b  border-dark-6 ">
+                        <figure class="px-10 pt-10">
+                            <img src="./images/location.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title text-2xl font-garamond text-dark-2 font-extrabold mb-4">Address</h2>
+                            <p>A108 Adam Street,</p>
+                            <p>New York, NY 535022</p>
+                        </div>
+                    </div>
+                    <!-- card 3 -->
+                    <div class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5  border-r border-t border-dark-6 ">
+                        <figure class="px-10 pt-10">
+                            <img src="./images/location.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title text-2xl font-garamond text-dark-2 font-extrabold mb-4">Address</h2>
+                            <p>A108 Adam Street,</p>
+                            <p>New York, NY 535022</p>
+                        </div>
+                    </div>
+                    <!-- card 4 -->
+                    <div class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5  border-l border-t  border-dark-6">
+                        <figure class="px-10 pt-10">
+                            <img src="./images/location.png" alt="Shoes" class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                            <h2 class="card-title text-2xl font-garamond text-dark-2 font-extrabold mb-4">Address</h2>
+                            <p>A108 Adam Street,</p>
+                            <p>New York, NY 535022</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Send Message -->
+                <div class="flex flex-col gap-8 w-1/2">
+                    <label class="input flex items-center gap-2 bg-[#F3F3F3] p-6 h-[72px]">
+                        <input type="text" class="grow" placeholder="Your Name" />
+                      </label>
+                      <label class="input flex items-center gap-2 bg-[#F3F3F3] p-6 h-[72px]">
+                        <input type="email" class="grow" placeholder="Your Email" />
+                      </label>
+                      <label class="input flex items-center gap-2 bg-[#F3F3F3] p-6 h-[72px]">
+                        <input type="text" class="grow" placeholder="Subject" />
+                      </label>
+                      <textarea class=" rounded-xl items-center gap-2 bg-[#F3F3F3] p-6 h-[160px]" placeholder="Your Message"></textarea>
+                      <button class="btn bg-legal-primary text-white font-semibold p-5 h-[72px]">
+                        Send Message
+                      </button>
                 </div>
             </div>
         </section>
