fixed some problems

--- a/index.html
+++ b/index.html
@@ -417,13 +417,12 @@
                 suffered alteration in some form, by injected humour.
             </p>
             <!-- container -->
-            <div class="flex flex-col md:flex-row gap-8 justify-center items-center">
-                
+            <div class="flex flex-col md:flex-row gap-8 justify-center items-center">    
                 <!-- cards -->
                 <div class="grid grid-cols-2">
                     <!-- card 1 -->
                     <div class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5 border-r border-b  border-dark-6 ">
-                        <figure class="px-10 pt-10">
+                        <figure >
                             <img src="./images/location.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
@@ -434,35 +433,35 @@
                     </div>
                     <!-- card 2 -->
                     <div class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5  border-l border-b  border-dark-6 ">
-                        <figure class="px-10 pt-10">
-                            <img src="./images/location.png" alt="Shoes" class="rounded-xl" />
+                        <figure>
+                            <img src="./images/call.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
-                            <h2 class="card-title text-2xl font-garamond text-dark-2 font-extrabold mb-4">Address</h2>
-                            <p>A108 Adam Street,</p>
-                            <p>New York, NY 535022</p>
+                            <h2 class="card-title text-2xl font-garamond text-dark-2 font-extrabold mb-4">Call Us</h2>
+                            <p>+88 01750 00 00 00</p>
+                            <p>+88 01750 00 00 00</p>
                         </div>
                     </div>
                     <!-- card 3 -->
                     <div class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5  border-r border-t border-dark-6 ">
-                        <figure class="px-10 pt-10">
-                            <img src="./images/location.png" alt="Shoes" class="rounded-xl" />
+                        <figure>
+                            <img src="./images/email.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
-                            <h2 class="card-title text-2xl font-garamond text-dark-2 font-extrabold mb-4">Address</h2>
-                            <p>A108 Adam Street,</p>
-                            <p>New York, NY 535022</p>
+                            <h2 class="card-title text-2xl font-garamond text-dark-2 font-extrabold mb-4">Email Us</h2>
+                            <p>info@gmail.com</p>
+                            <p>info@gmail.com</p>
                         </div>
                     </div>
                     <!-- card 4 -->
                     <div class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5  border-l border-t  border-dark-6">
-                        <figure class="px-10 pt-10">
-                            <img src="./images/location.png" alt="Shoes" class="rounded-xl" />
+                        <figure>
+                            <img src="./images/time.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
-                            <h2 class="card-title text-2xl font-garamond text-dark-2 font-extrabold mb-4">Address</h2>
-                            <p>A108 Adam Street,</p>
-                            <p>New York, NY 535022</p>
+                            <h2 class="card-title text-2xl font-garamond text-dark-2 font-extrabold mb-4">Working Hours</h2>
+                            <p>Mon-Fri: 9AM to 5PM</p>
+                            <p>Sunday: 9AM to 1 PM</p>
                         </div>
                     </div>
                 </div>
