added footer section

--- a/index.html
+++ b/index.html
@@ -417,12 +417,13 @@
                 suffered alteration in some form, by injected humour.
             </p>
             <!-- container -->
-            <div class="flex flex-col md:flex-row gap-8 justify-center items-center">    
+            <div class="flex flex-col md:flex-row gap-8 justify-center items-center">
                 <!-- cards -->
                 <div class="grid grid-cols-2">
                     <!-- card 1 -->
-                    <div class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5 border-r border-b  border-dark-6 ">
-                        <figure >
+                    <div
+                        class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5 border-r border-b  border-dark-6 ">
+                        <figure>
                             <img src="./images/location.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
@@ -432,7 +433,8 @@
                         </div>
                     </div>
                     <!-- card 2 -->
-                    <div class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5  border-l border-b  border-dark-6 ">
+                    <div
+                        class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5  border-l border-b  border-dark-6 ">
                         <figure>
                             <img src="./images/call.png" alt="Shoes" class="rounded-xl" />
                         </figure>
@@ -443,7 +445,8 @@
                         </div>
                     </div>
                     <!-- card 3 -->
-                    <div class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5  border-r border-t border-dark-6 ">
+                    <div
+                        class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5  border-r border-t border-dark-6 ">
                         <figure>
                             <img src="./images/email.png" alt="Shoes" class="rounded-xl" />
                         </figure>
@@ -454,12 +457,14 @@
                         </div>
                     </div>
                     <!-- card 4 -->
-                    <div class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5  border-l border-t  border-dark-6">
+                    <div
+                        class="card bg-[#F3F3F3] rounded-none h-[285px] w-[285px] p-5  border-l border-t  border-dark-6">
                         <figure>
                             <img src="./images/time.png" alt="Shoes" class="rounded-xl" />
                         </figure>
                         <div class="card-body items-center text-center">
-                            <h2 class="card-title text-2xl font-garamond text-dark-2 font-extrabold mb-4">Working Hours</h2>
+                            <h2 class="card-title text-2xl font-garamond text-dark-2 font-extrabold mb-4">Working Hours
+                            </h2>
                             <p>Mon-Fri: 9AM to 5PM</p>
                             <p>Sunday: 9AM to 1 PM</p>
                         </div>
@@ -470,24 +475,59 @@
                 <div class="flex flex-col gap-8 w-1/2">
                     <label class="input flex items-center gap-2 bg-[#F3F3F3] p-6 h-[72px]">
                         <input type="text" class="grow" placeholder="Your Name" />
-                      </label>
-                      <label class="input flex items-center gap-2 bg-[#F3F3F3] p-6 h-[72px]">
+                    </label>
+                    <label class="input flex items-center gap-2 bg-[#F3F3F3] p-6 h-[72px]">
                         <input type="email" class="grow" placeholder="Your Email" />
-                      </label>
-                      <label class="input flex items-center gap-2 bg-[#F3F3F3] p-6 h-[72px]">
+                    </label>
+                    <label class="input flex items-center gap-2 bg-[#F3F3F3] p-6 h-[72px]">
                         <input type="text" class="grow" placeholder="Subject" />
-                      </label>
-                      <textarea class=" rounded-xl items-center gap-2 bg-[#F3F3F3] p-6 h-[160px]" placeholder="Your Message"></textarea>
-                      <button class="btn bg-legal-primary text-white font-semibold p-5 h-[72px]">
+                    </label>
+                    <textarea class=" rounded-xl items-center gap-2 bg-[#F3F3F3] p-6 h-[160px]"
+                        placeholder="Your Message"></textarea>
+                    <button class="btn bg-legal-primary text-white font-semibold p-5 h-[72px]">
                         Send Message
-                      </button>
+                    </button>
                 </div>
             </div>
         </section>
     </main>
     <!-- footer section -->
-    <footer>
-
+    <footer class="footer bg-[#111111] text-base-content p-10 text-dark-6 font-normal grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 justify-center items-center py-10 md:py-20 lg:py-30 px-15 md:px-30 lg:px-40 gap-20">
+        <nav>
+            <div class="mb-5">
+                <img src="./images/logo.png" alt="">
+            </div>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+        </nav>
+        <nav>
+            <h6 class="font-garamond text-2xl font-semibold text-white mb-5">Usefull Link</h6>
+            <a class="link link-hover">Home</a>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Contact</a>
+            <a class="link link-hover">Jobs</a>
+            <a class="link link-hover">Press kit</a>
+        </nav>
+        <nav>
+            <h6 class="font-garamond text-2xl font-semibold text-white mb-5">Contact Now</h6>
+            <p>555 4th 5t NW, Washington <br>
+                DC 20530, United States</p>
+            <p>+88 01750 000 000 <br>
+                +88 01750 000 000</p>
+            <p>info@gmail.com <br>
+                info@gmail.com</p>
+        </nav>
+        <form>
+            <h6 class="font-garamond text-2xl font-semibold text-white mb-5">Subscribe</h6>
+            <fieldset class="form-control w-80">
+                <label class="label">
+                    <p>Subscribe for our latest & Articles. We Won’t Give You Spam Mails</p>
+                </label>
+                <div class="join">
+                    <input type="text" placeholder="username@site.com" class="input input-bordered join-item" />
+                    <button class="btn join-item bg-legal-primary border-none"><img src="./images/subscribe.png" alt=""></button>
+                </div>
+            </fieldset>
+        </form>
     </footer>
 </body>
 
